updates: fixed login blur and no overflow

--- a/static/style.css
+++ b/static/style.css
@@ -42,14 +42,13 @@ body {/*EDITED*/
   background: #1da1f2;
 }
 .wrapper{/*EDITED*/
-  margin-top: calc(100vh - 70px);
   padding-top: 50px;
   background: #fff;
   max-width: 475px;
   min-width: 300px;
   width: 90%; 
   border-radius: 15px;
-  padding: 495px 25px 15px 95px;
+  padding: 15px 25px 15px 25px;
   padding-top: 50px;
   overflow-y: auto;
   box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
